--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- Based on the analysis of Pymaceuticals Inc anti-cancer medications on mice, there are some things to take note of:\n",
+    "\n",
+    "This project saw tests being performed on **249 mice** with 10 different drugs used. Over a 45 day period, tumor development was observed and also measured. Conclusions drawn from the analysis show that theres a **positive correlation** between the weight of the mice and the tumor size with a **correlation value of 0.84**. The 4 drug regimens that were administered showed that **Capomulin** and **Ramicane** came up as the top most effective at reducing the size of tumors. The least effective of the bunch were **Infubinol** and **Ceftamin**.\n",
     " "
    ]
   },
@@ -935,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
