--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -10,9 +10,7 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Based on the analysis of Pymaceuticals Inc anti-cancer medications on mice, there are some things to take note of:\n",
-    "\n",
-    "This project saw tests being performed on **249 mice** with 10 different drugs used. Over a 45 day period, tumor development was observed and also measured. Conclusions drawn from the analysis show that theres a **positive correlation** between the weight of the mice and the tumor size with a **correlation value of 0.84**. The 4 drug regimens that were administered showed that **Capomulin** and **Ramicane** came up as the top most effective at reducing the size of tumors. The least effective of the bunch were **Infubinol** and **Ceftamin**.\n",
+    "Based on the analysis of Pymaceuticals Inc anti-cancer medications on mice, there are some things to take note of. This project saw tests being performed on 249 mice with 10 different drugs used. Over a 45 day period, tumor development was observed and also measured. Conclusions drawn from the analysis show that theres a **positive correlation** between the weight of the mice and the tumor size with a **correlation value of 0.84**. The 4 drug regimens that were administered showed that **Capomulin** and **Ramicane** came up as the top most effective at reducing the size of tumors. The least effective of the bunch were **Infubinol** and **Ceftamin**.\n",
     " "
    ]
   },
@@ -1059,200 +1057,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_months</th>\n",
-       "      <th>Weight (g)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a203</td>\n",
-       "      <td>45</td>\n",
-       "      <td>67.973419</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Infubinol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>20</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>a251</td>\n",
-       "      <td>45</td>\n",
-       "      <td>65.525743</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Infubinol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a262</td>\n",
-       "      <td>45</td>\n",
-       "      <td>70.717621</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Placebo</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>17</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>a275</td>\n",
-       "      <td>45</td>\n",
-       "      <td>62.999356</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ceftamin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>20</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>a366</td>\n",
-       "      <td>30</td>\n",
-       "      <td>63.440686</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Stelasyn</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>16</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>z435</td>\n",
-       "      <td>10</td>\n",
-       "      <td>48.710661</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>12</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>z578</td>\n",
-       "      <td>45</td>\n",
-       "      <td>30.638696</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>11</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>z581</td>\n",
-       "      <td>45</td>\n",
-       "      <td>62.754451</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Infubinol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>z795</td>\n",
-       "      <td>45</td>\n",
-       "      <td>65.741070</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>13</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>249 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites Drug Regimen  \\\n",
-       "0       a203         45           67.973419                 2    Infubinol   \n",
-       "1       a251         45           65.525743                 1    Infubinol   \n",
-       "2       a262         45           70.717621                 4      Placebo   \n",
-       "3       a275         45           62.999356                 3     Ceftamin   \n",
-       "4       a366         30           63.440686                 1     Stelasyn   \n",
-       "..       ...        ...                 ...               ...          ...   \n",
-       "244     z435         10           48.710661                 0     Propriva   \n",
-       "245     z578         45           30.638696                 0     Ramicane   \n",
-       "246     z581         45           62.754451                 3    Infubinol   \n",
-       "247     z795         45           65.741070                 3     Naftisol   \n",
-       "248     z969         45           73.867845                 4     Naftisol   \n",
-       "\n",
-       "        Sex  Age_months  Weight (g)  \n",
-       "0    Female          20          23  \n",
-       "1    Female          21          25  \n",
-       "2    Female          17          29  \n",
-       "3    Female          20          28  \n",
-       "4    Female          16          29  \n",
-       "..      ...         ...         ...  \n",
-       "244  Female          12          26  \n",
-       "245    Male          11          16  \n",
-       "246  Female          24          25  \n",
-       "247  Female          13          29  \n",
-       "248    Male           9          30  \n",
-       "\n",
-       "[249 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
@@ -1262,8 +1067,7 @@
     "last_mouse_timepoint = last_mouse_timepoint.reset_index()\n",
     "\n",
     "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n",
-    "timepoint_combined_df = last_mouse_timepoint.merge(combined_mouse_study, on=['Mouse ID','Timepoint'],how=\"left\")\n",
-    "timepoint_combined_df"
+    "timepoint_combined_df = last_mouse_timepoint.merge(combined_mouse_study, on=['Mouse ID','Timepoint'],how=\"left\")"
    ]
   },
   {
@@ -1426,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
